objects/SCP_Certa_GC__customReport__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SCP Custom Report</relationshipLabel>
        <relationshipName>SCP_Custom_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__actionPlan__c</fullName>
        <defaultValue>true</defaultValue>
        <label>actionPlan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__clientContext__c</fullName>
        <defaultValue>true</defaultValue>
        <label>clientContext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__competitors__c</fullName>
        <defaultValue>true</defaultValue>
        <label>competitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__dcm__c</fullName>
        <defaultValue>true</defaultValue>
        <label>dcm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__growthStrategy__c</fullName>
        <defaultValue>true</defaultValue>
        <label>growthStrategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__industryTrend__c</fullName>
        <defaultValue>true</defaultValue>
        <label>industryTrend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__influenceMap__c</fullName>
        <defaultValue>true</defaultValue>
        <label>influenceMap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__kpi__c</fullName>
        <defaultValue>true</defaultValue>
        <label>kpi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__netActivity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>netActivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__provenValue__c</fullName>
        <defaultValue>true</defaultValue>
        <label>provenValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__valueDrivers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>valueDrivers</label>
        <type>Checkbox</type>
    </fields>
    <label>SCP Custom Report</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de SCP Custom Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Custom Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>